# forge-cli

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  README.md  defaults.yaml  models.yaml  module.yaml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: build.yaml  ci.yaml  module-release.yaml  release.yaml  test.yaml
config/: remap-tools.yaml
docs/decisions/: ASSEMBLY-0001 Content Assembly Pipeline.md  ASSEMBLY-0002 Provenance Tracking.md  ASSEMBLY-0003 Manifest-Based Deployment Tracking.md  ASSEMBLY-0004 Assembly and Deployment Pipeline.md  ASSEMBLY-0005 Rulesync Interoperability.md  ASSEMBLY-0006 Validation via YAML Schema.md  ASSEMBLY-0007 Cross-Provider Convergence.md  ASSEMBLY-0008 Adopt Rulesync Deployment Conventions.md  ASSEMBLY-0009 Direct Copy Fallback.md  ASSEMBLY-0010 Copy Provenance.md  ASSEMBLY-0011 Provider and Model Identifiers.md  CLI-0001 Repository Structure.md  CLI-0002 Module Layout.md  CLI-0003 Conflict Resolution on Install.md  CLI-0004 Structured Operation Results.md  CLI-0005 Embedded Assets via rust-embed.md  CLI-0006 Agent-Executable Install Instructions.md  RUST-0007 Feature Flags.md  (+14 more)
schemas/: CONTRIBUTING.mdschema  agent.schema.yaml  forge-adr.schema.json  module.schema.yaml  rule.schema.yaml  skill.schema.yaml
scripts/: validate.sh
src/: commands.rs  error.rs  main.rs  module.rs  result.rs
templates/: INSTALL.md  agents.mdschema  ci.yaml  decisions.mdschema  validate.yaml
tests/: cli.rs  deploy.rs  drift.rs
(+135 files in other folders)
